# AA-Explorer

./: .gitignore  AGENTS.md  BET-LOG.md  BOOTSTRAP.md  CLAUDE.md  LICENSE  README.md
.agents/skills/bootstrap/: SKILL.md
.agents/skills/build-report/: SKILL.md
.agents/skills/build-verify/: SKILL.md
.agents/skills/grant-readme/: SKILL.md
.agents/skills/grant-submit/: SKILL.md
.agents/skills/pattern-extract/: SKILL.md
.agents/skills/s1-data-pipeline/: SKILL.md
.agents/skills/s2-api-layer/: SKILL.md
.agents/skills/s3-dashboard-ship/: SKILL.md
.agents/skills/sprint-execute/: SKILL.md
.agents/skills/sprint-retro/: SKILL.md
.claude/agents/: small-diff-implementer.md  spec-auditor.md  work-reporter.md
.claude/skills/bet-kickoff/: SKILL.md
.claude/skills/bootstrap/: SKILL.md
.claude/skills/build-report/: SKILL.md
.claude/skills/build-verify/: SKILL.md
.claude/skills/grant-submit/: SKILL.md
.claude/skills/pattern-extract/: SKILL.md
.codex/: config.toml
.codex/agents/: bet_implementer.toml  spec_guardian.toml  work_reporter.toml
backend/: pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/routers/: paymasters.py  smart_accounts.py  stats.py  userops.py
backend/app/services/: decoder.py  indexer.py  pipeline.py  queries.py
backend/tests/: conftest.py  test_aggregator.py  test_api.py  test_api_perf.py  test_classifier.py  test_decoder.py  test_indexer.py  test_queries.py  test_schema.py  test_schemas.py
docs/: INDEX.md
frontend/: package-lock.json  package.json
frontend/src/__tests__/: api.test.ts
(+4 files in other folders)
