[tool.poetry]
name = "aa-explorer-backend"
version = "0.1.0"
description = "Base AA Explorer backend baseline scaffold"
authors = ["WARVIS <noreply@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.110,<1"
uvicorn = {version = ">=0.29,<1", extras = ["standard"]}
web3 = ">=7,<8"
websockets = ">=13,<16"
aiosqlite = ">=0.20,<1"
pydantic = ">=2.7,<3"
httpx = ">=0.27,<1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
pytest-asyncio = ">=0.23,<1"
ruff = ">=0.4,<1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
